# python-cli

./: README.md  pyproject.toml
python_cli/: __main__.py
